# Claude-Weekly-Usage-Calculator

./: README.md  future-ideas.txt  index.html  package-lock.json  package.json  vite.config.ts
.github/workflows/: release.yml
scripts/: before-bundle.mjs
src/: App.svelte  app.css
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: icon.rs  lib.rs  main.rs  usage.rs
src/lib/: MainView.svelte  SessionView.svelte.bak  SettingsView.svelte  SimulatorView.svelte  WeekBarSegmented.svelte  accent.ts  gauge.ts
src/lib/skins/: catppuccin-latte.css  catppuccin-mocha.css  crt.css  dracula.css  github-light.css  lcd.css  mac.css  nord.css  rose-pine-dawn.css  sepia.css  solarized-dark.css  solarized-light.css
