[package]
name = "claude-usage-tracker"
version = "0.1.0"
description = "Claude Weekly Usage Tracker"
authors = []
edition = "2021"

[lib]
name = "claude_usage_tracker_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[[bin]]
name = "claude-usage-tracker"
path = "src/main.rs"

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = ["tray-icon", "image-png"] }
tauri-plugin-store = "2"
tauri-plugin-autostart = "2"
tauri-plugin-opener = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
chrono = { version = "0.4", features = ["serde"] }
tiny-skia = "0.11"
image = { version = "0.25", default-features = false, features = ["png"] }

[profile.release]
panic = "abort"
codegen-units = 1
lto = true
opt-level = "s"
strip = true
